			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------


===================================
VERSION 5.5.31 (September 17, 2005)
===================================

  * PORT: Bug#90: Fix Prolog Makefile for parallel make.  Mike Frysinger.

  * ENHANCED: Faster merging of memory left from terminated threads.  Code
    contributed by Servey Tikhonov.

  * FIXED: shell/[1,2] when executed by multiple threads (Unix version).

  * ENHANCED: Safer abort from format/[2,3].


===================================
VERSION 5.5.30 (September 12, 2005)
===================================

  * ADDED: library(nb_set): manipulate non-backtrackable sets of terms.

  * FIXED: Re-loading files while other threads execute them.

  * FIXED: Bug#88: Safe reloading of running code.  Dmitry.

  * FIXED: Unicode handling in read/1 for \-escape sequences
    Lyosha Ilyukhin.


===================================
VERSION 5.5.29 (September 07, 2005)
===================================

  * FIXED: library(url) bug re-appeared due to version management problems.


===================================
VERSION 5.5.28 (September 05, 2005)
===================================

  * FIXED: Bug#82: Make win_shell/[2,3] Unicode aware.  Dmitry.

  * MODIFIED: renamed assume/1 to assertion/1.  Suggested by Steve Moyle.
    The debug library issues a compatibility warning for assume/1.

  * MODIFIED: Translate {} in DCG to true.  Allows for
    t --> {/*comment*/}, ... without error.  Michael Mueller.

  * PORT: Added Slackware package management targets.  John Poplett.

  * FIXED: Safe 64-bit integer multiplication before moving to bignum
    or error.  With help from Bart Demoen.

  * MODIFIED: No longer convert the result of arithmetic that is float